# Freight-registry

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  LICENSE  README.md  TODO.md  WEBSITE.md  docker-compose.nginx.yml  docker-compose.s3.yml  docker-compose.yml  seed.py
.github/workflows/: docker-publish.yml
deploy/: freight-registry.example.toml  freight-registry.service  nginx-downloads.conf
docs/: api.md  architecture.md
docs-site/: docusaurus.config.js  package.json  sidebars.js
docs-site/docs/: install.md  intro.md  publish.md
docs-site/src/css/: custom.css
migrations/: 0001_initial_schema.sql  0002_token_scopes.sql  0003_channels.sql  0003_packages_latest_version.sql  0004_docs_blob.sql  0004_prebuilts.sql  0005_organizations.sql  0006_dependencies.sql  0007_source_deps.sql  0008_license.sql  0008_version_status.sql  0010_oauth.sql  0010_totp_recovery_codes.sql  0011_token_org_scope.sql  0012_reports.sql
migrations_pg/: 0001_initial_schema.sql  0002_add_supports.sql  0002_token_scopes.sql  0003_channels.sql  0004_prebuilts.sql  0005_organizations.sql  0006_license.sql  0007_keywords.sql  0008_oauth.sql  0009_version_languages.sql  0010_totp_recovery_codes.sql  0011_token_org_scope.sql  0012_reports.sql  0013_user_role.sql
src/: auth.rs  config.rs  db.rs  lib.rs  mail.rs  main.rs  metrics.rs  oauth.rs  permissions.rs  rate_limit.rs  storage.rs  totp.rs  validate.rs
src/api/: admin.rs  audit.rs  channels.rs  delete.rs  docs.rs  download.rs  email.rs  health.rs  keywords.rs  login.rs  me_packages.rs  me_password.rs  metrics_handler.rs  mod.rs  my_tokens.rs  oauth.rs  orgs.rs  owners.rs  packages.rs  prebuilt.rs  publish.rs  readme.rs  refresh.rs  register.rs  reports.rs  reset.rs  search.rs  stats.rs  totp.rs  user_profile.rs  verify_status.rs  yank.rs
src/tui/: app.rs  client.rs  config.rs  main.rs  ui.rs
static/: 404.html  account.html  app.js  docs.html  graph.html  index.html  install.html  login.html  package.html  register.html  style.css  users.html
static/docs/: index.html
tests/: api.rs  db.rs  integration.rs  validate.rs
