[package]
name        = "freight-registry"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "Self-hosted freight package registry server"

[lib]
name = "freight_registry"
path = "src/lib.rs"

[[bin]]
name = "freight-registry"
path = "src/main.rs"

[dependencies]
axum               = "0.7"
tokio              = { version = "1", features = ["full"] }
tower-http         = { version = "0.5", features = ["trace", "cors", "fs"] }
totp-rs            = { version = "5", features = ["gen_secret", "otpauth"] }
sqlx               = { version = "0.8", features = ["sqlite", "postgres", "any", "runtime-tokio", "macros", "migrate"] }
reqwest            = { version = "0.12", features = ["json", "stream"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
sha2               = "0.10"
hex                = "0.4"
clap               = { version = "4", features = ["derive", "env"] }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand               = "0.8"
url                = "2"
async-trait        = "0.1"
argon2             = "0.5"
governor           = { version = "0.6", features = ["dashmap"] }
object_store       = { version = "0.11", features = ["aws"] }
futures            = "0.3"
prometheus-client  = "0.22"
toml               = "0.8"
flate2             = "1"
tar                = "0.4"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls"] }
tower          = { version = "0.4", features = ["util"] }
rmp-serde      = "1"
docify         = { path = "../docify", default-features = false }

[dev-dependencies]
http-body-util = "0.1"
